--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/lodash-es": "^4.17.12",
-    "@types/react": "^18.3.3",
+    "@types/react": "18.3.10",
     "@types/rollup-plugin-peer-deps-external": "^2.2.5",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "@typescript-eslint/parser": "^7.17.0",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "eslint": "8.57.1",
     "rimraf": "^6.0.1",
     "rollup": "^4.19.1",
     "rollup-plugin-dts": "^6.1.1",
@@ -39,7 +39,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
-    "typescript": "^5.5.4"
+    "typescript": "5.6.2"
   },
   "peerDependencies": {
     "react": "^18.3.1"
